# FishCode

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README  README.txt
sources/: arguments.cpp  arguments.hpp  block.cpp  block.hpp  commands.hpp  error.cpp  error.hpp  file.cpp  file.hpp  fishcode.cpp  fishcode.hpp  frame.cpp  frame.hpp  key.cpp  key.hpp  main.cpp  manual.hpp  messages.hpp  password.cpp  password.hpp  results.hpp  string.hpp  strings.hpp
src/: block.cpp  block.hpp  button.hpp  errors.cpp  errors.hpp  events.cpp  events.hpp  field.cpp  field.hpp  file.cpp  file.hpp  fishcode.cpp  fishcode.hpp  frame.cpp  frame.hpp  key.cpp  key.hpp  label.cpp  label.hpp  password.cpp  password.hpp  progress.cpp  progress.hpp  strings.hpp  task.cpp  task.hpp  types.hpp
src/core/: block.cpp  core.cpp  errors.cpp  file.cpp  key.cpp  password.cpp
src/data/: data.cpp
src/ui/: button.cpp  field.cpp  frame.cpp  label.cpp  progress.cpp  task.cpp  ui.cpp
src/ui/events/: events.hpp
